<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewDeclarationGeneral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".declarations.add.GeneralDeclarationFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/contraintLayoutDeclarationGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="121dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:text="@string/description"
            android:textAlignment="textStart"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextDescription"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewDescription"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <EditText
            android:id="@+id/editTextDate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/Date"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/toggleButtonBTW"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/btw"
            android:textAlignment="textStart"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate2" />

        <TextView
            android:id="@+id/textViewDate2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/Date"
            android:textAlignment="textStart"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

        <ToggleButton
            android:id="@+id/toggleButtonBTW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="144dp"
            android:textOff="@string/off"
            android:textOn="@string/on"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textViewDate" />

        <TextView
            android:id="@+id/textViewTotalExclBTW"
            android:layout_width="169dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/total_without_btw"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

        <EditText
            android:id="@+id/editTextTotalExclBTW"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/zero_euro"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewTotalExclBTW"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="16dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:text="@string/eruo_sign"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextTotalExclBTW"
            app:layout_constraintEnd_toStartOf="@+id/editTextTotalExclBTW" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>